tests/error/15_tuple_oob.py
# [RUNTIME] Tuple get out of bound. Similar to list
# RUNTIME ERROR: Index out of bounds. Trying to access 100, length is 3
a: (int) = (1,2,3)
print(a[100])
